--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
 	compile 'com.opencsv:opencsv:3.8'
 	compile 'org.apache.logging.log4j:log4j-core:2.6.2'
 	compile 'org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE'
+	compile 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.0.M9'
+	compile 'javax.servlet:jstl:1.2'
+	compile 'org.springframework.boot:spring-boot-starter-actuator:1.4.0.RELEASE'
 	
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
