--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ dependencies {
 	compile 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.0.M9'
 	compile 'javax.servlet:jstl:1.2'
 	compile 'org.springframework.boot:spring-boot-starter-actuator:1.4.0.RELEASE'
+	compile 'commons-fileupload:commons-fileupload:1.3.2'
+	compile 'org.apache.commons:commons-csv:1.4'
+	compile 'com.h2database:h2:1.4.192'
+	compile 'org.springframework.boot:spring-boot-starter-security:1.4.0.RELEASE'
+	
 	
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
