--- a/build.gradle
+++ b/build.gradle
@@ -13,23 +13,24 @@ apply plugin: 'eclipse'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-    // Use 'jcenter' for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
     mavenCentral()
 }
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    // The production code uses the SLF4J logging API at compile time
-	compile 'com.opencsv:opencsv:3.8'
-	compile 'org.apache.logging.log4j:log4j-core:2.6.2'
-	compile 'org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE'
-	compile 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.0.M9'
+	compile 'org.springframework.boot:spring-boot-starter-actuator:1.4.0.RELEASE' //spring framework
+	compile 'org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE' //spring framework
+	compile 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.0.M9' //application server
 	compile 'javax.servlet:jstl:1.2'
-	compile 'org.springframework.boot:spring-boot-starter-actuator:1.4.0.RELEASE'
-	compile 'commons-fileupload:commons-fileupload:1.3.2'
+	
+	compile 'org.apache.logging.log4j:log4j-core:2.6.2' // logging
+	
+	compile 'com.opencsv:opencsv:3.8' // csv read
 	compile 'org.apache.commons:commons-csv:1.4'
-	compile 'com.h2database:h2:1.4.192'
+	
+	compile 'commons-fileupload:commons-fileupload:1.3.2' // file upload
+	
+	compile 'com.h2database:h2:1.4.192' //h2db
 	
 	
     // Declare the dependency for your favourite test framework you want to use in your tests.
