--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	compile 'commons-fileupload:commons-fileupload:1.3.2' // file upload
 	
 	compile 'org.hsqldb:hsqldb:2.3.4' //h2db
+	compile 'com.h2database:h2:1.4.192'
+	
+	compile 'org.eclipse.persistence:javax.persistence:2.1.1'
 	
 	
     // Declare the dependency for your favourite test framework you want to use in your tests.
