--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	compile 'org.hsqldb:hsqldb:2.3.4' //h2db
 	compile 'com.h2database:h2:1.4.192'
 	
-	compile 'org.eclipse.persistence:javax.persistence:2.1.1'
+	compile 'org.eclipse.persistence:javax.persistence:2.1.1' //entity handler
 	
 	
     // Declare the dependency for your favourite test framework you want to use in your tests.
