--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-actuator:1.4.0.RELEASE' //spring framework
 	compile 'org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE' //spring framework
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.4.0.RELEASE' //spring data
+	compile 'org.springframework.security:spring-security-crypto:4.1.3.RELEASE'
 	
 	compile 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.0.M9' //application server
 	compile 'javax.servlet:jstl:1.2'
