--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	compile 'com.h2database:h2:1.4.192'
 	
 	compile 'org.eclipse.persistence:javax.persistence:2.1.1' //entity handler
-	
+	compile 'org.hibernate:hibernate-validator:5.3.0.CR1'
 	
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
